homeassistant/homeassistant-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  labels:
    io.kompose.service: homeassistant
  generation: 1
  name: homeassistant
  namespace: homeautomation
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: homeassistant
    spec:
      containers:
      - image: homeassistant/home-assistant
        imagePullPolicy: IfNotPresent
        name: homeassistant
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8123
        volumeMounts:
        - mountPath: /config
          name: homeassistant-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: homeassistant-config
        nfs:
         server: 192.168.178.33
         path: "/volume1/openflixr/homeassistant/"
status: {}
