homeassistant/homeassistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeautomation
spec:
  selector:
    io.kompose.service: homeassistant
  ports:
  - protocol: TCP
    port: 8123
    targetPort: 8123
  type:
    NodePort
