homeassistant/homeassistant-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homeassistant-external
  namespace: homeautomation
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    traefik.frontend.redirect.entryPoint: https
    traefik.frontend.redirect.regex: ^http://(.*)
    traefik.frontend.redirect.replacement: https://$1
    #ingress.kubernetes.io/auth-type: basic
    #ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
  - host: hassio.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: homeassistant
          servicePort: 8123
  - host: hassio.cloud.oraperf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: homeassistant
          servicePort: 8123
